# computer-use-cli

./: .gitignore  README.md  integration_result.md  plan.md  plan_for_swarm.md  pyproject.toml
src/computer_use/: chain.py  cli.py  coordinate.py  key_parser.py
src/computer_use/actions/: __init__.py  base.py  click.py  clipboard.py  cursor_position.py  drag.py  focus_window.py  hold_key.py  key_press.py  mouse_move.py  mouse_state.py  screenshot.py  scroll.py  status.py  type_text.py  wait.py  windows.py
src/computer_use/adapters/: __init__.py  anthropic.py  base.py  openai.py
src/computer_use/ocr/: __init__.py  base.py  macos.py  windows.py
src/computer_use/platform/: __init__.py  base.py  macos.py  windows.py
src/computer_use/screenshot/: capture.py  scaling.py
src/computer_use/server/: client.py  server.py
tests/integration/: test_performance.py
